<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <Preference
        android:key="copyright_key"
        android:summary="@string/copyright_summary"
        android:title="@string/app_name" >
        <intent
            android:action="android.intent.action.VIEW"
            android:data="http://forum.xda-developers.com/xposed/modules/mod-heads-notifications-t2791217" />
    </Preference>

    <CheckBoxPreference
        android:key="enabled_for_ongoing_notifications"
        android:summary="@string/pref_ongoing_summary"
        android:title="@string/pref_ongoing_title" />

    <CheckBoxPreference
        android:key="enabled_only_when_fullscreen"
        android:summary="@string/pref_fullscreen_summary"
        android:title="@string/pref_fullscreen_title" />

    <CheckBoxPreference
        android:key="enabled_only_when_unlocked"
        android:summary="@string/pref_unlocked_summary"
        android:title="@string/pref_unlocked_title" />

    <EditTextPreference
        android:defaultValue="3700"
        android:key="heads_up_notification_decay"
        android:numeric="integer"
        android:summary="@string/heads_up_notification_decay_summary"
        android:title="@string/heads_up_notification_decay_title" />

    <Preference
        android:summary="@string/blacklist_summary"
        android:title="@string/blacklist_title" >
        <intent android:action="com.mohammadag.headsupenabler.BLACKLIST" />
    </Preference>

</PreferenceScreen>