<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.larswerkman.holocolorpicker.ColorPicker
                android:id="@+id/picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dip"
                android:text="@string/saturation"
                android:textAllCaps="true"
                android:textStyle="bold"/>

            <com.larswerkman.holocolorpicker.SaturationBar
                android:id="@+id/saturationbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dip"
                android:text="@string/value"
                android:textAllCaps="true"
                android:textStyle="bold"/>

            <com.larswerkman.holocolorpicker.ValueBar
                android:id="@+id/valuebar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dip"
                android:text="@string/opacity"
                android:textAllCaps="true"
                android:textStyle="bold"/>

            <com.larswerkman.holocolorpicker.OpacityBar
                android:id="@+id/opacitybar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="16dip"
                android:text="@string/hex"
                android:textAllCaps="true"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textNoSuggestions"
                android:maxLength="8"
                android:textAllCaps="true"/>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        style="?android:attr/buttonBarStyle">

        <Button
            android:id="@+id/cancel"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/cancel"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/done"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/done"
            style="?android:attr/buttonBarButtonStyle"/>

    </LinearLayout>

</LinearLayout>
